--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "npx @11ty/eleventy build",
+    "start": "npx @11ty/eleventy --serve"
+  },
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1"
   }
